--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -554,6 +554,7 @@
     // color:#fff;
     // background-image: linear-gradient(120deg, #B9B4E0 0%,transparent 100%);
     font-weight: bold;
+    font-size: $type-size-3;
     // @include yiq-contrasted(#736e76);
   }
 }
