💻 Change the color of the unread text.

--- a/_sass/minimal-mistakes/_reset.scss
+++ b/_sass/minimal-mistakes/_reset.scss
@@ -79,7 +79,9 @@ audio:not([controls]) {
 }
 
 a {
-  color: $link-color;
+  // color: $link-color;
+  color: #96ACB3;
+
 }
 
 /* Apply focus state */
