--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -25,8 +25,12 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
                " }}
             </h1>
             {% endif %} {% if page.read_time %}
-            <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
-            {% endif %}
+            <p class="page__meta">
+               <a>{{page.subtitle}}</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+               <i class="fas fa-fw fa-marker" aria-hidden="true"></i> 
+               {% include read-time.html %} 
+            </p>
+            {% endif %} 
          </header>
          {% endunless %}
 
@@ -66,13 +70,13 @@ include breadcrumbs.html %} {% endunless %} {% endif %}
    site.related_posts.size > 0 %}
    <div class="page__related">
       <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h4>
-      <div class="grid__wrapper">{% for post in site.related_posts limit:4 %} {% include archive-single.html type="grid" %} {% endfor %}</div>
+      <div class="grid__wrapper">{% for post in site.related_posts limit:3 %} {% include archive-single.html type="grid" %} {% endfor %}</div>
    </div>
    {% comment %}<!-- otherwise show recent posts if no related when `related: true` -->{% endcomment %} {% elsif page.id and page.related %}
    <div class="page__related">
       <h4 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You May Also Enjoy" }}</h4>
       <div class="grid__wrapper">
-         {% for post in site.posts limit:4 %} {% if post.id == page.id %} {% continue %} {% endif %} {% include archive-single.html type="grid" %} {%
+         {% for post in site.posts limit:3 %} {% if post.id == page.id %} {% continue %} {% endif %} {% include archive-single.html type="grid" %} {%
          endfor %}
       </div>
    </div>
